welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
do {var bis = 0 
^Poucet:7: error: ';' expected but 'while' found.
bis = 0} while (!estSurOrange) 
         ^Poucet:10: error: 'while' expected but '}' found.
}
^